--- a/.github/workflows/ticker_extraction.yml
+++ b/.github/workflows/ticker_extraction.yml
@@ -3,6 +3,8 @@ name: Ticker Extraction and Storage
 on:
   schedule:
     - cron: "0 * * * *"
+  workflow_dispatch:
+
 
 jobs:
   extract_and_store_tickers:
