--- a/.github/workflows/ticker_extraction.yml
+++ b/.github/workflows/ticker_extraction.yml
@@ -30,4 +30,4 @@ jobs:
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_PORT: ${{ secrets.DB_PORT }}
         run: python ticker_extraction.py
-        working-directory: main
+        working-directory: stock-market-sentiment-analysis-using-bert
